Alteração de h5 para h2 no CSS

--- a/teste.html
+++ b/teste.html
@@ -20,7 +20,7 @@
         .container{
             text-align: center;
         }
-        h2{ /*Alteração de h5 para h2 */
+        h2{ /*Alteração de h5 para h2 no CSS*/
             background-color: black;
             color: aliceblue;
         }
